# sst-plugininfra

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  azure-pipelines.yml
.github/workflows/: build-pr.yml  code-checks.yml
cmake/: git-version-functions.cmake
doxygen/: Doxyfile
include/sst/: plugininfra.h
include/sst/juceplugininfra/: keybindings.h
include/sst/plugininfra/: cpufeatures.h  keybindings.h  misc_platform.h  paths.h  userdefaults.h  version_information.h
include/sst/plugininfra/patch-support/: patch_base.h  patch_base_clap_adapter.h
libs/asiosdk/: README_SSTPLUGININFRA
libs/asiosdk/Steinberg ASIO Logo Artwork/: ASIO-compatible-logo-Steinberg-TM-BW.eps
libs/filesystem/: CMakeLists.txt
libs/filesystem/src/: import.h.in
libs/strnatcmp/: CMakeLists.txt  README.md  strnatcmp.cpp
libs/tinyxml/: CMakeLists.txt
libs/tinyxml/include/tinyxml/: tinyxml.h
libs/tinyxml/src/: tinyxml.cpp
libs/tinyxml/test/: xmltest.cpp
scripts/: fix_file_comments.pl  fix_header_guards.pl
scripts/installer_mac/: make_installer.sh
src/: cpufeatures.cpp  misc_linux.cpp  misc_macos.mm  misc_windows.cpp  paths_linux.cpp  paths_macos.mm  paths_subst.cpp.in  paths_windows.cpp  version_information_in.cpp
tests/: CMakeLists.txt  cpufeatures.cpp  dumppaths.cpp  tests.cpp  tests_linux.cpp  version_infro_tests.cpp  ziptests.cpp
